test/semantic_errors/invalid_declaration8.mc
void main() {
    int a, b = c; /* c not declared */
}